k8s/base/compreface-fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: compreface-fe
  labels:
    app.kubernetes.io/name: compreface-fe
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: compreface-fe
  ports:
    - name: http
      port: 80
      targetPort: http
